# api-auth-methods

./: .pre-commit-config.yaml  README.md  pyproject.toml
app/: api_key_auth.py  http_basic_auth.py  jwt_auth.py  main.py
src/: main.py
src/schemas/response/: health.py
